@@ -37,8 +37,6 @@ static inline List* globalEmptyList()
     return &staticEmptyList;
 }
 
-// ECMA 10.2
-
 ExecState::ExecState(JSGlobalObject* globalObject, JSObject* globalThisValue, ScopeChain& globalScopeChain)
     : m_globalObject(globalObject)
     , m_globalThisValue(globalThisValue)
@@ -50,11 +48,11 @@ ExecState::ExecState(JSGlobalObject* globalObject, JSObject* globalThisValue, Sc
 {
 }
 
-JSGlobalObject* ExecState::lexicalGlobalObject() const
+#ifndef NDEBUG
+bool ExecState::isGlobalObject(JSObject* o) const
 {
-    JSObject* object = m_scopeChain->bottom();
-    ASSERT(object->isGlobalObject());
-    return static_cast<JSGlobalObject*>(object);
+    return o->isGlobalObject();
 }
+#endif
 
 } // namespace KJS
